--- a/front/src/style/playlist.css
+++ b/front/src/style/playlist.css
@@ -16,3 +16,24 @@
     padding-top: 10px;
     border-top: 2px solid #282828;
 }
+
+.table {
+    color: whitesmoke!important;
+}
+
+.table td, .table th {
+    padding: .75rem;
+    vertical-align: top;
+    border-top: 1px solid #282828!important;
+}
+
+.table-header {
+    font-variant: small-caps;
+    border: none!important;
+    border-top: none!important;
+}
+
+.music-tr:hover {
+    background-color: #282828!important;
+    color: whitesmoke!important;
+}
