--- a/front/src/views/components/menu/menu.css
+++ b/front/src/views/components/menu/menu.css
@@ -13,6 +13,7 @@
 
 .nav-item {
     font-variant: small-caps;
+    padding: 0 .5rem 0 .5rem;
 }
 
 a.active {
@@ -26,7 +27,7 @@ a.active {
 }
 
 .navbar {
-    position: relative;
+    position: sticky;
     display: flex;
     align-items: unset!important;
     padding: .5rem 1rem;
@@ -60,4 +61,9 @@ a.active {
 #page-content-wrapper {
     min-width: 0;
     width: 100%;
+}
+
+.playlists-container {
+    /*height: 100vh;*/
+    /*overflow-y: auto;*/
 }
