--- a/front/src/views/components/playlist-card/playlist-card.css
+++ b/front/src/views/components/playlist-card/playlist-card.css
@@ -16,3 +16,9 @@
     color: #B3B3B3;
 }
 
+.cover-image {
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+    object-position: center;
+}
